<resources>
    <string name="app_name">Atividade 13 e 14</string>
    <string name="tvInicial">Bem Vindo(a) ao Sistema Bibliotecário das aulas 13 e 14 de mobile</string>
    <string name="livro">Livro</string>
    <string name="revista">Revista</string>
    <string name="aluno">Aluno</string>
    <string name="aluguel">Aluguel</string>

    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnAtualizar">Atualizar</string>
    <string name="btnExcluir">Excluir</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnListar">Listar</string>

</resources>